# TableTimeAssistant

./: .gitignore  App.tsx  GAME_SYSTEM.md  README.md  app.json  image_prompts.csv  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py
.claude/: launch.json
android/: build.gradle  settings.gradle
android/app/: build.gradle  proguard-rules.pro
backend/: database.py  dnd.py  llm.py  llm_config.json  main.py  models.py  prompts_config.py  referee.py  roll_directive.py  schemas.py  templates_data.py
frontend/: index.html
frontend/static/: app.js  style.css
grokhanika/: __init__.py  dice.py  enums.py
grokhanika/adventure/: __init__.py  adventure_api.py  combat_bridge.py  config.py  embeddings.py  intent.py  llm.py  memory.py  narrator.py  presets.py  prompts.py  retrieval.py  scene.py  session.py
grokhanika/data/: prompts.yaml
grokhanika/db/: __init__.py  database.py  models.py  seed.py  yaml_loader.py
grokhanika/engine/: __init__.py  abilities.py  actions.py  combat.py  combatant.py  controllers.py  encounter.py
grokhanika/rules/: __init__.py  attributes.py  effects.py  skills.py  (+1 more)
scripts/: demo.py  generate_image_prompts.py  init_db.py  reindex_embeddings.py  run_web.py
tests/: conftest.py  test_abilities.py  test_adventure_api.py  test_adventure_session.py  test_attributes.py  test_bastion.py  test_combat.py  test_controllers.py  test_dice.py  test_dice_roll_flow.py  test_effects.py  test_encounter.py  test_intent.py  test_memory.py  test_mental.py  test_retrieval.py  test_skills.py  test_validation.py  test_web.py
(+49 files in other folders)
