[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "grokhanika"
version = "0.1.0"
description = "Игровая система настольной игры «Гроханика» — ядро на Python"
requires-python = ">=3.11"
dependencies = [
    "SQLAlchemy>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["grokhanika*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
