[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "grokhanika"
version = "0.1.0"
description = "Игровая система настольной игры «Гроханика» — ядро на Python"
requires-python = ">=3.11"
dependencies = [
    "SQLAlchemy>=2.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
# httpx — клиент к OpenAI-совместимому серверу генерации изображений (кнопка
# «Перегенерировать» в админке).
web = ["Flask>=3.0", "httpx>=0.27"]
dev = ["pytest>=8", "Flask>=3.0"]
# Модуль текстового приключения с ИИ-ГМ: локальная LLM + локальный эмбеддер (RAG).
# torch/transformers тяжёлые — ставится отдельно, в CI мокается.
adventure = [
    "Flask>=3.0",
    "httpx>=0.27",
    "numpy>=1.24",
    "sentence-transformers>=2.2",
]

[tool.setuptools.packages.find]
include = ["grokhanika*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
